--- a/src/assets/style/base/_layout.scss
+++ b/src/assets/style/base/_layout.scss
@@ -20,8 +20,8 @@
 }
 
 footer {
-  background-color: var(--clr1);
-  color: var(--clr1bg);
+  background-color: $clr-base1;
+  color: $clr-base1;
   padding: 1em;
   text-align: center;
 }
